--- a/action.yml
+++ b/action.yml
@@ -225,7 +225,7 @@ runs:
          }
 
          if [ ${{ inputs.aosp-clang }} = false ] && [ ${{ inputs.android-ndk }} = false ]; then
-             echo "::group:: Downloading 3rd clang"
+             echo "::group:: Downloading Third Party Clang"
              export OTHER_CLANG_URL=${{ inputs.other-clang-url }}
              mkdir -p -v $HOME/clang
              download_and_extract "$OTHER_CLANG_URL" "clang" "$HOME/clang" "${{ inputs.other-clang-branch }}"
@@ -262,7 +262,7 @@ runs:
          fi
 
          if [ ${{ inputs.aosp-clang }} = true ]; then
-             echo "::group:: Downloading AOSP clang"
+             echo "::group:: Downloading AOSP Clang"
              if [ ${{ inputs.aosp-gcc }} = true ]; then
                  mkdir $HOME/clang -p -v
                  if [ ! -z ${{ inputs.android-version }} ]; then
@@ -280,7 +280,7 @@ runs:
 
          if [ ${{ inputs.aosp-gcc }} = true ]; then
              if [ ! -z ${{ inputs.other-gcc64-url }} ] || [ ! -z ${{ inputs.other-gcc32-url }} ]; then
-                 echo "::group:: Downloading 3RD GCC"
+                 echo "::group:: Downloading Third Party GCC"
                  if [ ! -z ${{ inputs.other-gcc64-url }} ] && [ ! -z ${{ inputs.other-gcc32-url }} ]; then
                      if [ -d $HOME/clang ]; then
                          export OTHER_GCC64_URL=${{ inputs.other-gcc64-url }}
@@ -291,7 +291,7 @@ runs:
                          download_and_extract "$OTHER_GCC32_URL" "gcc-arm" "$HOME/gcc-32" "${{ inputs.other-gcc32-branch }}"
                      fi
                  else
-                     echo "Error: Please enable 3rd other-gcc32-url and other-gcc64-url." && exit 15
+                     echo "Error: Please enable third party other-gcc64-url and other-gcc32-url." && exit 15
                  fi
              else
                  echo "::group:: Downloading AOSP GCC"
