Fix mkdir while downloading clang
Signed-off-by: Fyg369 <142138034+Fyg369@users.noreply.github.com>

--- a/action.yml
+++ b/action.yml
@@ -230,7 +230,7 @@ runs:
                  echo "Please enable aosp-gcc."
                  exit 127
              fi
-         else
+         elif [ ! -z ${{ inputs.other-clang-url }} ]; then
              echo "::group:: Downloading Third party clang"
              export OTHER_CLANG_URL=${{ inputs.other-clang-url }}
              download_and_extract "$OTHER_CLANG_URL" "clang" "$HOME/clang" "${{ inputs.other-clang-branch }}"
