--- a/action.yml
+++ b/action.yml
@@ -196,7 +196,7 @@ runs:
              local output_name=$2
              local extract_dir=$3
              local branch=${4:-main}
-             mkdir -p -v "$extract_dir"
+             [ ! -z "$extract_dir" ] && mkdir -p -v "$extract_dir"
              case "$url" in
                  *.tar.gz)
                      aria2c -o "${output_name}.tar.gz" "$url"
