--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,11 @@ name: CI
 on:
   push:
     branches: main
+    paths:
+      - '.github/workflows/**'
+      - 'action.yml'
+      - 'tests/**'
+
   pull_request:
 
 jobs:
